--- a/styles.css
+++ b/styles.css
@@ -8,9 +8,9 @@
     --primary-color: #23262e; 
     --background-color: #F0F8FF; 
     --text-color: #FFFFFF; 
-    --hover-color: #4682B4; 
-    --section-even: #1f3974;
-    --section-odd: #339fdd;
+    --hover-color: #4682B4;
+    --section-even: url(img/background-img.png); 
+    --section-odd: #2e5368;
     --erro-color: #e21111;
     --sucesso-color: #28a745;
     --form-hover-color: #1f40aa;
@@ -65,12 +65,14 @@ a:hover {
 
 
 .section {
-    padding: 2rem;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
     text-align: center;
 }
 
 .section:nth-child(even) {
-    background-color: var(--section-even);
+    background-image: var(--section-even);
+    background-size: 1000px;
     color: var(--text-color);
 }
 
@@ -89,6 +91,102 @@ a:hover {
     line-height: 1.6;
 }
 
+/* Carrossel Início */
+.slider .wrapper {
+    width: 800px;
+    height: 400px;
+    box-shadow: 10px 10px 20px rgba(0 , 0, 0, 0.6);
+    border-radius: 10px;
+    margin: 5rem auto;
+    overflow: hidden;
+}
+.slider .wrapper-holder {
+    display: grid;
+    grid-template-columns: repeat(4, 100%);
+    height: 100%;
+    width: 100%;
+    animation: slider 30s ease-in-out infinite alternate;
+}
+
+.slider #slider-img-1 {
+    background-image: url(img/slider1.png);
+    background-position: center;
+    background-size: cover;
+}
+
+.slider #slider-img-2 {
+    background-image: url(img/slider2.png);
+    background-position: center;
+    background-size: cover;
+}
+
+.slider #slider-img-3 {
+    background-image: url(img/slider3.png);
+    background-position: center;
+    background-size: cover;
+}
+
+.slider #slider-img-4 {
+    background-image: url(img/slider4.png);
+    background-position: center;
+    background-size: cover;
+}
+
+@keyframes slider {
+    0%{transform: translateX(0%);}
+    10%{transform: translateX(-100%);}
+    20%{transform: translateX(-100%);}
+    30%{transform: translateX(-200%);}
+    40%{transform: translateX(-200%);}
+    50%{transform: translateX(-200%);}
+    60%{transform: translateX(-300%);}
+    70%{transform: translateX(-300%);}
+    80%{transform: translateX(-300%);}
+    90%{transform: translateX(0%);}
+    100%{transform: translateX(0%);}
+}
+
+.slider-navigation {
+    text-align: center;
+    margin-top: -50px;
+}
+.slider-navigation button {
+    background-color: var(--primary-color);
+    border: none;
+    margin: 0 5px;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+}
+.slider-navigation button.active {
+    background-color: var(--hover-color);
+}
+
+
+@media screen and (max-width: 600px) {
+    .slider {
+        position: relative;
+    }
+    
+    .slider .wrapper {
+        width: 300px;
+        height: 500px;
+        box-shadow: 10px 10px 20px rgba(0 , 0, 0, 0.6);
+        border-radius: 10px;
+        margin: 5rem auto;
+        overflow: hidden;
+    }
+    .slider .wrapper-holder {
+        display: grid;
+        grid-template-columns: repeat(4, 100%);
+        height: 100%;
+        width: 100%;
+        animation: slider 30s ease-in-out infinite alternate;
+    }
+
+}
+/* Carrossel Fim */
+
 
 /* Menu Hamburguer Início */
 .ham-menu {
@@ -96,12 +194,13 @@ a:hover {
     width: 50px;
     margin-left: auto;
     position: relative;
+    z-index: 1;
 }
 
 .ham-menu span {
     height: 5px;
     width: 100%;
-    background-color: rgb(21, 132, 206);
+    background-color: var(--section-odd);
     border-radius: 25px;
     position: absolute;
     top: 50%;
@@ -132,6 +231,7 @@ a:hover {
     text-align: center;
     font-size: 3rem;
     transition: .3s ease;
+    z-index: 1;
 }
 
 .off-screen-menu.active {
