--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 :root {
@@ -9,8 +10,9 @@
     --background-color: #F0F8FF; 
     --text-color: #FFFFFF; 
     --hover-color: #4682B4; 
-    --section-even: #1f3974;
-    --section-odd: #339fdd;
+    --background-inicial: url(img/background.svg);
+    --background-final: url(img/background-final.svg);
+    --background-color-section: rgba(125, 154, 190, 1);
     --erro-color: #e21111;
     --sucesso-color: #28a745;
     --form-hover-color: #1f40aa;
@@ -23,6 +25,7 @@ body {
     margin: 0;
     padding: 0;
 }
+
 header {
     display: flex;
     flex-direction: row;
@@ -32,6 +35,7 @@ header {
     padding: 0 1rem;
     position: fixed;
     align-items: center;
+    z-index: 1;
 }
 
 header img {
@@ -41,6 +45,8 @@ header img {
 }
 
 main {
+    background-color: var(--background-color-section);
+    color: var(--text-color);
     padding-top: 80px;
 }
 
@@ -76,21 +82,22 @@ a:hover {
 }
 
 .section {
-    padding: 2rem;
+    padding: 170px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
-.section:nth-child(even) {
-    background-color: var(--section-even);
-    color: var(--text-color);
+#section-1 {
+    background-image: var(--background-inicial);
+    background-size: cover;
 }
 
-.section:nth-child(odd) {
-    background-color: var(--section-odd);
-    color: var(--primary-color);
+#section-7 {
+    background-image: var(--background-final);
+    background-size: cover;
 }
 
 .section h2 {
@@ -107,8 +114,7 @@ a:hover {
 }
 
 .texto-section {
-    margin-right: 150px;
-    max-width: 750px;
+    max-width: 650px;
 }
 
 .texto-section h1 {
@@ -117,7 +123,7 @@ a:hover {
 
 
 .img-section {
-    width: 600px;
+    width: 900px;
     height: 400px;
 }
 
@@ -185,6 +191,113 @@ a:hover {
 }
 
 /* Menu Hamburguer Fim */
+
+/* Carrossel Início */
+.slider {
+    margin: 0 auto;
+    width: 700px;
+    height: 400px;
+    overflow: hidden;
+    border-radius: 1rem;
+}
+
+.slides {
+    width: 400%;
+    height: 400px;
+    display: flex;
+}
+
+.slides input {
+    display: none;
+}
+
+.slide {
+    width: 25%;
+    position: relative;
+    transition: 2s;
+}
+
+.slide img {
+    width: 800px;
+}
+
+.manual-navigation {
+    position: absolute;
+    width: 700px;
+    margin-top: -40px;
+    display: flex;
+    justify-content: center;
+}
+
+.manual-btn {
+    border: 2px solid #FFF;
+    padding: 5px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: 1s;
+}
+
+.manual-btn:not(:last-child) {
+    margin-right: 30px;
+}
+
+.manual-btn:hover {
+    background-color: #FFF;
+}
+
+#radio1:checked ~ .first {
+    margin-left: 0;
+}
+
+#radio2:checked ~ .first {
+    margin-left: -25%;
+}
+
+#radio3:checked ~ .first {
+    margin-left: -50%;
+}
+
+#radio4:checked ~ .first {
+    margin-left: -75%;
+}
+
+.navigation-auto div{
+    border: 2px solid #20a6ff;
+    padding: 5px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: 1s;
+}
+
+.navigation-auto {
+    position: absolute;
+    width: 700px;
+    margin-top: 360px;
+    display: flex;
+    justify-content: center;
+}
+
+.navigation-auto div:not(:last-child) {
+    margin-right: 30px;
+}
+
+#radio1:checked ~ .navigation-auto .auto-btn1 {
+    background-color: #FFF;
+}
+
+#radio2:checked ~ .navigation-auto .auto-btn2 {
+    background-color: #FFF;
+}
+
+#radio3:checked ~ .navigation-auto .auto-btn3 {
+    background-color: #FFF;
+}
+
+#radio4:checked ~ .navigation-auto .auto-btn4 {
+    background-color: #FFF;
+}
+/* Carrossel Fim */
+
 
 /* PopUp Início */
 .hidden {
@@ -325,15 +438,14 @@ footer {
     margin-top: 1rem;
 }
 
-.footer-section .socials a {
+.footer-section .socials i {
     margin: 0 0.5rem;
-    display: inline-block;
-}
-
-.footer-section .socials a img {
     width: 25px;
     height: 25px;
+    display: inline-block;
+    cursor: pointer;
 }
+
 
 .footer-bottom {
     margin-top: 2rem;
